# LoggingVisualizer

./: .clang-format  .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeLists.txt  LICENSE  README.md  check_formating.sh  format_me.sh  main.cpp  main_window.cpp  main_window.h  main_window.ui  qodana.yaml  sonar-project.properties
.github/workflows/: Build and test.yml  qodana_scan.yml  sonarcloud_analysis.yml
application/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui
application/resources/: resoures.qrc
benchmarks/: CMakeLists.txt
benchmarks/file_loading_benchmark/: CMakeLists.txt  main.cpp
benchmarks/file_parsing_benchmark/: CMakeLists.txt  main.cpp
cmake/: CPM.cmake  download_dependencies.cmake  setup_global_compile_options.cmake  util_functions.cmake
mocks/: CMakeLists.txt
mocks/include/mocks/model/: mock_filtered_log_message_view.hpp  mock_log_data_context.hpp  mock_log_message_filter.hpp  mock_settings_manager.hpp
mocks/include/mocks/widgets/: mock_log_level_widget.hpp  mock_log_widget.hpp  mock_menu_bar.hpp  mock_toolbar.hpp
mocks/include/mocks/windows/: mock_settings_window.h  mock_window_manager.hpp
model/: CMakeLists.txt
model/include/: log_entry.h
model/include/model/: ifiltered_log_message_view.h  ifiltered_log_message_view.hpp  ilog_data_context.h  ilog_data_context.hpp  ilog_message_filter.h  isettings_manager.hpp  log_data_context.h  log_data_context_factory.h  log_data_context_factory.hpp  log_entry.h  log_level_color_settings.h  log_level_color_settings_entry.h  log_level_color_settings_entry.hpp  log_source.h  observable.h  observable_map.h  observable_vector.h  settings_manager.h  settings_manager.hpp  settings_manager_factory.hpp  settings_model.h  signal.hpp
model/src/: file_reader.cpp  file_reader.h  filtered_log_message_view.cpp  filtered_log_message_view.h  filtered_log_message_view.hpp  generic_file_reader.cpp  generic_file_reader.h  generic_file_reader.hpp  ifile_reader.h  ifile_reader.hpp  log_data_context.cpp  log_data_context.h  log_data_context.hpp  log_data_context_factory.cpp  log_message_filter.cpp  log_message_filter.h  log_message_filter.hpp  log_source.cpp  memory_mapped_file_parser.cpp  memory_mapped_file_parser.h  settings_manager.cpp  settings_manager.hpp  settings_manager_factory.cpp
model/src/platform/: memory_mapped_file.h  memory_mapped_file.hpp
model/src/platform/unix/: memory_mapped_file.cpp  memory_mapped_file.h  memory_mapped_file.hpp
model/src/platform/windows/: memory_mapped_file.cpp  memory_mapped_file.h  memory_mapped_file.hpp
model/src/settings/: settings_node.cpp  settings_node.hpp  settings_object.hpp  settings_tree.cpp  settings_tree.hpp
model/tests/: CMakeLists.txt  empty_test.cpp  filtered_log_message_view_test.cpp  log_data_context_test.cpp  log_message_filter_test.cpp  memory_mapped_file_parser_test.cpp  observable_test.cpp
model/tests/mocks/: mock_file_reader.h
model/tests/settings/: settings_tree_test.cpp
presenters/: CMakeLists.txt
presenters/include/presenters/: base_presenter.h  base_presenter.hpp  log_presenter.h  log_presenter.hpp  menu_bar_presenter.h  menu_bar_presenter.hpp  settings_log_level_presenter.h  settings_log_level_presenter.hpp  toolbar_presenter.h  toolbar_presenter.hpp
presenters/src/: base_presenter.cpp  log_presenter.cpp  menu_bar_presenter.cpp  settings_log_level_presenter.cpp  toolbar_presenter.cpp
presenters/src/item_models/: log_item_model.cpp  log_item_model.h  log_item_model.hpp
presenters/tests/: CMakeLists.txt  empty_test.cpp  log_presenter_test.cpp  menu_bar_presenter_test.cpp  settings_log_level_presenter_test.cpp  toolbar_presenter_test.cpp
scripts/: check_copyright.py  check_include_order.py  check_includes.py  prepare_cordana.sh  run_coverage.sh  utils.py
types/: CMakeLists.txt
types/include/exceptions/: FileNotFoundException.h  FileNotFoundException.hpp
types/include/types/: color.h  color.hpp  highlight_color_pair.h  highlight_color_pair.hpp  log_entry.h  log_entry.hpp
widgets/: CMakeLists.txt
widgets/include/: main_window.h
widgets/include/item_models/: abstract_item_model.h  log_level_highlight_model.h
widgets/include/widgets/: ilog_level_widget.hpp  ilog_widget.hpp  imenubar.hpp  itoolbar.hpp  log_level_widget.h  log_level_widget.hpp  log_widget.h  log_widget.hpp  menubar.h  toolbar.h  toolbar.hpp
widgets/include/widgets/item_models/: abstract_item_model.hpp  log_level_highlight_model.h  log_level_highlight_model.hpp
widgets/include/windows/: isettings_window.hpp  iwindow_manager.hpp  main_window.h  main_window.hpp  settings_window.h  settings_window.hpp  window_manager.h  window_manager.hpp  window_manager_factory.hpp
widgets/src/: log_level_widget.cpp  log_widget.cpp  log_widget.ui  main_window.ui  menubar.cpp  menubar.ui
widgets/src/item_models/: log_item_model.cpp  log_item_model.h  log_item_model.hpp  log_level_highlight_model.cpp
widgets/src/widgets/: log_level_widget.cpp  log_level_widget.hpp  log_widget.cpp  log_widget.hpp  menubar.cpp  menubar.hpp  toolbar.cpp  toolbar.hpp  toolbar.ui
widgets/src/windows/: main_window.cpp  main_window.ui  settings_window.cpp  settings_window.hpp  settings_window.ui  window_manager.cpp  window_manager.hpp  window_manager_factory.cpp
